# GoogleTestTraining

./: CMakeLists.txt
include/: sample_func.hpp
src/: hello_test.cpp  sample_func.cpp
